[package]
name = "cmd_crypto_chart"
version = "0.1.0"
authors = ["Avi Aryan <avi.aryan123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/seanmonstar/reqwest#example
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# https://github.com/serde-rs/serde#serde-in-action
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
